<resources>
    <string name="app_name">PetPro</string>
    <string name="pet_pro">Pet Pro</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="admin">Admin</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="my_appointments">My Appointments</string>
    <string name="buy_it_again">Buy It Again</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="create">Create</string>
    <string name="search">Search</string>
    <string name="browse_items">Browse Items</string>
    <string name="book_grooming">Book Grooming</string>
    <string name="add_item">Add Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="product_name">Product Name</string>
    <string name="dollar_symbol">$</string>
    <string name="_0_00">0.00</string>
    <string name="qty">Qty: </string>
    <string name="_0">0</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="confirm_username">Confirm Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="item_to_delete">Item to Delete</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="each">each</string>
    <string name="search_for_item">Search for Item</string>
    <string name="item_name">Item Name</string>
    <string name="purchase_history">Purchase History</string>
    <string name="no_items_found">No Items Found</string>
    <string name="no_items_in_cart">No items in cart</string>
    <string name="purchase">Purchase</string>
    <string name="no_appointments_found">No appointments found</string>
    <string name="remove">remove</string>
    <string name="add_admin">Add Admin</string>
    <string name="grooming_availability">Grooming Availability</string>
    <string name="appt_date">Aptt. Date</string>
    <string name="appt_time">Aptt. Time</string>
    <string name="appt_location">Aptt. Location</string>
    <string name="add_appt">Add Aptt.</string>
    <string name="total_symbol">Total: $</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="add_all_item_info_warning">Please enter item name, price, and quantity</string>
    <string name="item_posted">Item posted for sale</string>
    <string name="item_already_exists">Item already for sale</string>
    <string name="could_note_find_item">Could not find item</string>
    <string name="item_name_taken">Item name already in use</string>
    <string name="item_updated">Item updated</string>
    <string name="item_removed">Item removed</string>
    <string name="item_not_for_sale">Item is not for sale</string>
    <string name="add_all_aptt_info_warning">Please enter appointment date, time, and location</string>
    <string name="aptt_created">Appointment slot created</string>
    <string name="aptt_removed">Appointment slot deleted</string>
    <string name="aptt_already_exists">Appointment already offered</string>
    <string name="remove_aptt">Remove Aptt.</string>
    <string name="np_aptt_exists">Appointment does not exist</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="book_appointment">Book Appointment?</string>
    <string name="appointment_booked">Appointment booked</string>
    <string name="thank_you">Thank you for your purchase!</string>
    <string name="remove_from_cart">Remove from Cart?</string>
    <string name="cancel_aptt">Cancel Appointment?</string>
    <string name="aptt_canceled">Appointment canceled</string>
    <string name="no_order_hist">No past orders. Better go buy something!</string>
    <string name="remove_appointment">Remove Appointment</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="_00_00">00:00</string>
    <string name="location">Location</string>
    <string name="past_orders">past orders</string>
    <string name="my_grooming_aptts">My Grooming Aptts.</string>
    <string name="account_deleted">Account deleted</string>
    <string name="incorrect_imputes">Incorrect imputes</string>
</resources>