<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextAddItemName"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:hint="@string/item_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAddItemPrice"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/price"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddItemName" />

    <EditText
        android:id="@+id/editTextAddItemQty"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/quantity"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddItemPrice" />

    <Button
        android:id="@+id/buttonConfirmAddItem"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/add_item"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddItemQty" />

    <Button
        android:id="@+id/buttonCancelAddItem"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/cancel"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConfirmAddItem" />

</androidx.constraintlayout.widget.ConstraintLayout>