<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <AutoCompleteTextView
        android:id="@+id/editTextGroomingApttDate"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:hint="@string/appt_date"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/editTextGroomingApttTime"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/appt_time"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGroomingApttDate" />

    <AutoCompleteTextView
        android:id="@+id/editTextGroomingApttLocation"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/appt_location"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGroomingApttTime" />

    <Button
        android:id="@+id/buttonConfirmAddGroomingappt"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/add_appt"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGroomingApttLocation" />

    <Button
        android:id="@+id/buttonCancelAddGroomingappt"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/cancel"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConfirmAddGroomingappt" />


</androidx.constraintlayout.widget.ConstraintLayout>