<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:cardBackgroundColor="@color/sea_foam_highlight">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/textViewAppointmentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/textViewAppointmentTime"
            android:text="@string/appointment_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/textViewAppointmentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/_00_00"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewAppointmentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewAppointmentDate"
            android:layout_marginTop="10dp"
            android:text="@string/location"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textViewAppointmentCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewAppointmentDate"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:text="@string/cancel"
            android:textColor="@color/design_default_color_error"
            android:textSize="17sp"
            android:visibility="invisible" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>