<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartItemRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/product_item_layout" />

    <TextView
        android:id="@+id/textViewCartTotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_symbol"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCartContinueShopping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewCartTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCartContinueShopping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewCartTotalText" />

    <Button
        android:id="@+id/buttonCartContinueShopping"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/continue_shopping"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCartPurchase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCartPurchase"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_margin="32dp"
        android:text="@string/purchase"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewNoItemsInCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_items_in_cart"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/cartItemRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>