<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonChooseAddAppt"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/add_appointment"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonChooseRemoveAppt"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/remove_appointment"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChooseAddAppt" />

    <Button
        android:id="@+id/buttonCancelAddRemoveAppt"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/cancel"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChooseRemoveAppt" />

</androidx.constraintlayout.widget.ConstraintLayout>